crates/ars-components/src/data_display/progress/snapshots/ars_components__data_display__progress__tests__progress_circle_track.snap
---
source: crates/ars-components/src/data_display/progress/mod.rs
expression: snapshot_attrs(&api.circle_track_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "circle-track",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "progress",
            ),
        ),
    ],
    styles: [],
}
