crates/ars-components/src/data_display/progress/snapshots/ars_components__data_display__progress__tests__progress_label.snap
---
source: crates/ars-components/src/data_display/progress/mod.rs
expression: snapshot_attrs(&api.label_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "label",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "progress",
            ),
        ),
    ],
    styles: [],
}
