crates/ars-components/src/data_display/progress/snapshots/ars_components__data_display__progress__tests__progress_root_complete.snap
---
source: crates/ars-components/src/data_display/progress/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-orientation",
            ),
            String(
                "horizontal",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "progress",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "complete",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "progress-label",
            ),
        ),
        (
            Aria(
                Orientation,
            ),
            String(
                "horizontal",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "100",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "0",
            ),
        ),
        (
            Aria(
                ValueNow,
            ),
            String(
                "100",
            ),
        ),
        (
            Aria(
                ValueText,
            ),
            String(
                "Complete",
            ),
        ),
        (
            Id,
            String(
                "progress",
            ),
        ),
        (
            Role,
            String(
                "progressbar",
            ),
        ),
    ],
    styles: [],
}
