crates/ars-components/src/data_display/progress/snapshots/ars_components__data_display__progress__tests__progress_track.snap
---
source: crates/ars-components/src/data_display/progress/mod.rs
expression: snapshot_attrs(&api.track_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "track",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "progress",
            ),
        ),
    ],
    styles: [],
}
