crates/ars-components/src/data_display/progress/snapshots/ars_components__data_display__progress__tests__progress_value_text.snap
---
source: crates/ars-components/src/data_display/progress/mod.rs
expression: snapshot_attrs(&api.value_text_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "value-text",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "progress",
            ),
        ),
    ],
    styles: [],
}
